@@ -11,6 +11,7 @@ YYYY/MM/DD
  - PCRE2 support for more modern systems (Paul Ramsey)
  - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
  - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
+ - #5905, Crash on deeply nested geometries (Paul Ramsey)
 
 
 PostGIS 3.1.12
